@@ -6,21 +6,30 @@ many. We are fundamentally a community project and aim to offer open
 development, responsive to users and contributors alike.
 
 Rich Apodaca
+Joshua Ballanco
 Michael Banck
+Ross Braithwaite
 Daniil Bratashov
 Francesco Bresciani
 Jean Brefort
 Alex Clark
 Joe Corkery
+Steve Constable
 Donald Curtis
+Andrew Dalke
+Daen de Leon
 Menno Deij
+Christian Ehrlicher
 Nick England
 Vincent Favre-Nicolin
+Maxim Fedorovsky
 Fabien Fontaine
 Malcolm Gillies
 Richard Gillilan
 Brian Goldman
 Rajarshi Guha
+Bob Hanson
+Marcus Hanwell
 Tommi Hassinen
 Bryan Herger
 David Hoekman
@@ -31,35 +40,43 @@ Mikael Johansson
 Stefan Kebekus
 Elmar Krieger
 Erik Kruus
+Daniel Leidert
 Christian Laggner
-Eugen Leitl
+Greg Landrum
+Eugene Leitl
 Teng Lin
+Zhiguo Liu
 Daniel Mansfield
 David Mathog
+Gerde Menche
 Dominik Mierzejewski
 Chris Morley
 Peter Murray-Rust
 Carsten Niehaus
 Anthony Nicholls
 Noel O'Boyle
-Sergei Pachkovsky
+Sergei Patchkovskii
 Steffen Reith
 Louis Richard
 Roger Sayle
 Ernst-Georg Schmid
 Ajay Shah
+Kevin Shepherd
 Sangwoo Shim
 Andrew Smellie
+Matt Sprague
 Matt Stahl
 Chris Swain
 S Joshua Swamidass
 Bob Tolbert
+Sergey Trepalin
 Tim Vandermeersch
+Ugo Varetto
 Martin Vogt
 Fredrik Wallner
 Pat Walters
 Pawel Wolinski
-Joerg Wegner
+Joerg Kurt Wegner
 
 There are probably many more who have contributed to Babel, OBabel,
 OELib or directly to Open Babel who are not listed here. Please help
